importing csv to DF with labels

--- a/spambase.ipynb
+++ b/spambase.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -34,26 +34,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with open('data/spambase.names') as f:\n",
     "    text = f.read()\n",
-    "\n",
-    "labels = re.findall(r'\\n(\\w*_?\\W?):', text)\n"
+    "labels = re.findall(r'\\n(\\w*_?\\W?):', text)\n",
+    "len(labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam_data = pd.read_csv('data/spambase.data', header=None, names=labels)\n",
+    "len(spam_data.columns)"
+   ]
   },
   {
    "cell_type": "code",
