Normal mode complete

--- a/spambase.ipynb
+++ b/spambase.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -10,12 +10,15 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.naive_bayes import MultinomialNB\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -34,32 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "57"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('data/spambase.names') as f:\n",
     "    text = f.read()\n",
     "labels = re.findall(r'\\n(\\w*_?\\W?):', text)\n",
-    "len(labels)"
+    "#labels.append('spam')\n",
+    "spam_data = pd.read_csv('data/spambase.data', header=None, names=labels+['spam'])\n",
+    "spam = spam_data.pop('spam')\n",
+    "train_X, test_X, train_y, test_y = train_test_split(spam_data, spam, random_state=37, train_size=.6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -67,27 +62,72 @@
     {
      "data": {
       "text/plain": [
-       "57"
+       "0    1673\n",
+       "1    1087\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spam_data = pd.read_csv('data/spambase.data', header=None, names=labels)\n",
-    "len(spam_data.columns)"
+    "train_y.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.79528985507246375"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes = MultinomialNB()\n",
+    "bayes.fit(train_X, train_y)\n",
+    "bayes.score(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.79033134166214014"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes.score(test_X, test_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From these two scores we see that a Multinomial Naive Bayesian Classifier gives a consistent trend for spam filtering from train data to test data."
+   ]
   }
  ],
  "metadata": {
